cluster/apps-3/networking/vpn-gateway/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway-pod-gateway
  namespace: networking
  labels:
    app.kubernetes.io/instance: vpn-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: pod-gateway
  egress:
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
          - port: ${SECRET_VPN_PORT}
            protocol: UDP
    - toEntities:
        - cluster
